# nbody-alpaka

./: .gitmodules  README.md  kernels.md  zeitplan.md
src/simulation/: simulation.cpp  simulation.hpp
src/simulation/kernels/: addKernel.hpp  forceMatrixKernel.cpp  forceMatrixKernel.hpp  kernels.hpp  nBodyKernel.hpp  nbodyKernel.hpp  updatePositionsKernel.hpp
src/simulation/types/: vector.hpp  vectors.hpp
tests/: .gitignore  CMakeLists.txt  vector_test.cpp
tests/addKernel/: CMakeLists.txt  addKernel_test.cpp
tests/benchmark/: CMakeLists.txt  benchmark_test.cpp
tests/forceMatrixKernel/: CMakeLists.txt  forcematrix_test.cpp
tests/simulationClass/: CMakeLists.txt  simulationClass_test.cpp
tests/simulationTest/: CMakeLists.txt  simulationClass_test2.cpp  vision.py
tests/updatePositionsKernel/: .updatePositions_test.cpp.swp.bkp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  updatePositions_test.cpp  updatePositions_test.out
tests/vector/: CMakeLists.txt  vector_test.cpp
