CMAKE_MINIMUM_REQUIRED(VERSION 3.3)
SET(PROJECT_NAME "simulationClass_test")
PROJECT(${PROJECT_NAME})
SET(PROJECT_ROOT "${CMAKE_CURRENT_LIST_DIR}/../..")
SET(ALPAKA_ROOT "${PROJECT_ROOT}/alpaka")
LIST(APPEND CMAKE_MODULE_PATH ${ALPAKA_ROOT})
FIND_PACKAGE("alpaka" REQUIRED)

INCLUDE("${ALPAKA_ROOT}/cmake/common.cmake")
INCLUDE("${ALPAKA_ROOT}/cmake/dev.cmake")

FIND_PACKAGE(Boost "1.56" QUIET COMPONENTS unit_test_framework)
IF(NOT Boost_UNIT_TEST_FRAMEWORK_FOUND)
    MESSAGE(FATAL_ERROR "Required test dependency Boost.Test could not be found")
ELSE()
    LIST(APPEND _INCLUDE_DIRECTORIES_PRIVATE ${Boost_INCLUDE_DIRS})
    LIST(APPEND _LINK_LIBRARIES_PRIVATE ${Boost_LIBRARIES})
ENDIF()

ADD_DEFINITIONS(${alpaka_DEFINITIONS} ${ALPAKA_DEV_COMPILE_OPTIONS})

SET(_NBODY_SRC_DIR "${PROJECT_ROOT}/src")

INCLUDE_DIRECTORIES(
    ${_INCLUDE_DIRECTORIES_PRIVATE}
    ${alpaka_INCLUDE_DIRS}
    ${_NBODY_SRC_DIR})

MESSAGE(STATUS "Alpaka include dir: ${alpaka_INCLUDE_DIRS}")

ALPAKA_ADD_EXECUTABLE("${PROJECT_NAME}.out" "${PROJECT_NAME}.cpp")
TARGET_LINK_LIBRARIES(
    "${PROJECT_NAME}.out"
    ${_LINK_LIBRARIES_PRIVATE}
    )
