CMAKE_MINIMUM_REQUIRED(VERSION 3.3)
PROJECT("vector_test")
SET(ALPAKA_ROOT "${CMAKE_CURRENT_LIST_DIR}/../../alpaka")
LIST(APPEND CMAKE_MODULE_PATH ${ALPAKA_ROOT})
FIND_PACKAGE("alpaka" REQUIRED)

INCLUDE("${ALPAKA_ROOT}/cmake/common.cmake")
INCLUDE("${ALPAKA_ROOT}/cmake/dev.cmake")

FIND_PACKAGE(Boost ${_ALPAKA_BOOST_MIN_VER} QUIET COMPONENTS unit_test_framework)
IF(NOT Boost_UNIT_TEST_FRAMEWORK_FOUND)
    MESSAGE(FATAL_ERROR "Required test dependency Boost.Test could not be found")
ELSE()
    LIST(APPEND _INCLUDE_DIRECTORIES_PRIVATE ${Boost_INCLUDE_DIRS})
    LIST(APPEND _LINK_LIBRARIES_PRIVATE ${Boost_LIBRARIES})
ENDIF()

ADD_DEFINITIONS("-std=c++11")

SET(_NBODY_SRC_DIR "../src")

INCLUDE_DIRECTORIES(
    ${_INCLUDE_DIRECTORIES_PRIVATE}
    ${alpaka_INCLUDE_DIRS}
    ${_NBODY_SRC_DIR})

ADD_EXECUTABLE("vector_test.out" "vector_test.cpp")
TARGET_LINK_LIBRARIES(
    "vector_test.out"
    ${_LINK_LIBRARIES_PRIVATE}
    )
